added GetAuthUser handler
